<resources>
    <string name="app_name">Fitbook</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="title_activity_home_detail">Chi tiết bài tập</string>
    <string name="title_activity_home_reschedule">Lên lịch bài tập</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Cài đặt</string>
    <string name="menu_home">Trang chủ</string>
    <string name="menu_schedule">Lịch tập</string>
    <string name="menu_health_management">Quản lý sức khỏe</string>
    <string name="menu_statistics">Thống kê kết quả tập luyện</string>
    <string name="menu_about">Giới thiệu</string>
    <string name="menu_sharing">Bài đăng chia sẻ</string>
    <string name="menu_settings">Cài đặt</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="exercise_detail_description_title">Mô tả bài tập</string>
    <string name="exercise_detail_steps_title">Các bước thực hiện</string>
    <string name="activity_home_reschedule_tv_duration">Vòng lặp (phút)</string>
    <string name="activity_home_reschedule_tv_time">Thời gian</string>
    <string name="activity_home_reschedule_tv_date">Ngày</string>
    <string name="activity_home_reschedule_save_btn">Lưu lịch</string>
    <string name="fragment_home_load_error">Không thể lấy danh sách bài tập</string>
    <string name="activity_home_detail_load_error">Không thể lấy chi tiết bài tập</string>
    <string name="gender_male">Nam</string>
    <string name="gender_female">Nữ</string>
    <string name="date_format">dd/MM/yyyy</string>
    <string name="time_format">HH:mm aa</string>
    <string name="date_time_format">dd/MM/yyyy HH:mm aa</string>
    <string name="date_time_format_upload_image_name">dd-MM-yyyy-HH-mm-ss</string>
    <string name="date_format_db">dd.MM.yyyy</string>
    <string name="date_picker_default_title">Chọn Ngày</string>
    <string name="main_login_button_title">Đăng nhập</string>
    <string name="main_sign_up_button_title">Đăng kí</string>
    <string name="main_continue_as_guest_text">Tiếp tục với tài khoản khách</string>
    <string name="auth_member_text_above_app_name">Thành viên</string>
    <string name="auth_username_text_field_label">Tên đăng nhập</string>
    <string name="auth_username_text_field_placeholder">Tên đăng nhập</string>
    <string name="auth_password_text_field_label">Mật khẩu</string>
    <string name="auth_password_text_field_placeholder">Mật khẩu</string>
    <string name="auth_confirm_password_text_field_placeholder">Xác nhận mật khẩu</string>
    <string name="auth_required_field_is_missing_value">Thông tin này bắt buộc nhập</string>
    <string name="auth_username_field_is_invalid">Tên đăng nhập phải chứa từ 6 đến 20 ký tự (chữ cái, số) và phải chứa ít nhất một chữ cái</string>
    <string name="auth_password_field_is_invalid">Mật khẩu phải chứa từ 6 đến 20 ký tự (chữ cái, số) và phải chứa cả chữ cái và số</string>
    <string name="login_action_bar_title">Đăng nhập</string>
    <string name="login_forgot_password_text">Quên mật khẩu?</string>
    <string name="login_no_account_text">Bạn chưa có tài khoản?</string>
    <string name="login_sign_up_text">ĐĂNG KÍ</string>
    <string name="login_continue_with_google_button_title">Tiếp tục với Google</string>
    <string name="login_continue_with_facebook_button_title">Tiếp tục với Facebook</string>
    <string name="login_username_or_password_field_are_incorrect">Tên đăng nhập hoặc mật khẩu không chính xác</string>
    <string name="sign_up_action_bar_title">Đăng kí</string>
    <string name="sign_up_already_have_account_text">Bạn đã có tài khoản?</string>
    <string name="sign_up_login_text">ĐĂNG NHẬP</string>
    <string name="sign_up_text_field_full_name_placeholder">Tên người dùng</string>
    <string name="sign_up_text_field_birthday_placeholder">Ngày sinh</string>
    <string name="sign_up_text_field_gender_placeholder">Giới tính</string>
    <string name="sign_up_failed_to_sign_up">Đăng kí không thành công</string>
    <string name="sign_up_full_name_field_is_invalid">Tên người dùng không hợp lệ</string>
    <string name="sign_up_birthday_field_is_invalid">Ngày sinh phải đúng định dạng dd/MM/yyyy</string>
    <string name="sign_up_confirm_password_dont_match_password">Xác nhận mật khẩu không giống với mật khẩu</string>
    <string name="about_description_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id sed vitae diam morbi ut eget dolor. Suspendisse dictum ipsum risus sodales nisi id. Etiam tellus amet convallis sit dolor elementum. Fames massa eget bibendum turpis nullam turpis. Massa amet rutrum nisl, vitae tristique vulputate lacus auctor amet. Nisi, amet integer suspendisse facilisis.
Semper pharetra, in feugiat viverra nunc quisque odio rhoncus vel. Cras justo amet vulputate morbi in nullam. Non massa eget amet purus vulputate vestibulum. Enim, eu duis est velit risus malesuada. Sociis lacinia neque aliquam tellus a ante massa.
Ornare mauris consectetur sit ipsum. Commodo amet praesent facilisi ultricies viverra vulputate massa sed. Dictum neque fringilla tellus, vitae, odio tincidunt varius fringilla. Dignissim risus quis sapien dignissim etiam semper maecenas. Massa sit sodales et suscipit varius morbi proin. At ipsum enim imperdiet suspendisse. In etiam neque, gravida adipiscing aliquet est pellentesque. Vitae eget lacus, amet, facilisis donec faucibus vulputate tincidunt tempus. Placerat commodo, viverra amet, in quam lorem rhoncus. Non mauris vitae mattis nunc, massa. Sed arcu egestas elit amet. Suspendisse pellentesque nunc, viverra mauris lorem velit eu semper. Ultrices ut consequat quisque tincidunt id tellus risus suspendisse.
Risus nam vel eu eget. Aliquam, semper adipiscing a elementum aliquet. Suspendisse quis lacinia dictumst consequat lobortis lectus tincidunt nulla diam. Morbi tincidunt a amet, nibh ac. Eget nibh sed enim, eros erat at. Eu volutpat ut pharetra, ipsum sit risus adipiscing molestie. Volutpat lobortis dictumst nulla volutpat nulla ac. Sit eu non amet, a dui mauris tellus, eu. Eget elementum nunc purus vel semper tempor. Blandit phasellus vitae senectus elit id ipsum vitae ut ipsum. Aliquet amet nulla nibh fermentum malesuada suspendisse est orci. Massa gravida turpis sagittis, a dis turpis. Purus sed tincidunt elementum ut praesent consectetur tellus habitant dui. At cursus molestie molestie vestibulum, auctor arcu porttitor porttitor dolor. Morbi vestibulum elit gravida nibh enim lorem.
Semper egestas ullamcorper etiam egestas sed habitant et. Senectus in convallis sed pharetra. Id sit lorem mus quam vulputate mi. At sem risus nibh auctor posuere turpis elementum quam. Aliquet nunc lectus congue nisi. Euismod aliquet nunc egestas pellentesque fermentum dui enim lobortis. Ut egestas sagittis, egestas ultrices viverra proin. Id suspendisse risus donec ut libero nec nisl, ultricies. Auctor vitae nulla pellentesque ac, euismod molestie. Sit gravida nibh phasellus non. Sagittis, duis consectetur etiam morbi suspendisse et diam ut tellus. Eget nunc, amet nulla sed enim et hendrerit morbi massa. Feugiat volutpat egestas amet mauris, nunc, egestas.</string>
    <string name="settings_display_header">Hiển thị</string>
    <string name="settings_dark_mode_title">Chế độ tối</string>
    <string name="settings_language_title">Ngôn ngữ</string>
    <string name="health_management_list_title">Danh sách thực phẩm dùng trong ngày</string>
    <string name="health_management_alert">Vui lòng nhập thông tin cho ngày hôm nay</string>
    <string name="health_management_form_height">Chiều cao (cm)</string>
    <string name="health_management_form_weight">Cân nặng (kg)</string>
    <string name="health_management_form_age">Tuổi</string>
    <string name="health_management_form_date">Ngày</string>
    <string name="food_list_unit">%1$.2f cal\n%2$s %3$s</string>
    <string name="add_food_activity_title">Thêm thực phẩm</string>
    <string name="add_food_list_unit">%1$.2f cal/%2$s</string>
    <string name="add_food_search_text">Tìm kiếm tên thực phẩm</string>
    <string name="add_food_button_text">Khác</string>
    <string name="dialog_input_food_amount_hint">Lượng thực phẩm</string>
    <string name="manual_add_food_activity_title">Thêm thực phẩm khác</string>
    <string name="manual_add_food_form_food_name">Tên thực phẩm</string>
    <string name="manual_add_food_form_food_calories">Lượng calo</string>
    <string name="manual_add_food_form_food_amount">Lượng thực phẩm (gram)</string>
    <string name="manual_add_food_save_button">Lưu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_list_item_tv_date">Hôm nay</string>
    <string name="short_date_text_monday">T2</string>
    <string name="short_date_text_tuesday">T3</string>
    <string name="short_date_text_wednesday">T4</string>
    <string name="short_date_text_thursday">T5</string>
    <string name="short_date_text_friday">T6</string>
    <string name="short_date_text_saturday">T7</string>
    <string name="short_date_text_sunday">CN</string>
    <string name="short_date_text_invalid">Không xác định</string>
    <string name="full_date_text_monday">Thứ 2</string>
    <string name="full_date_text_tuesday">Thứ 3</string>
    <string name="full_date_text_wednesday">Thứ 4</string>
    <string name="full_date_text_thursday">Thứ 5</string>
    <string name="full_date_text_friday">Thứ 6</string>
    <string name="full_date_text_saturday">Thứ 7</string>
    <string name="full_date_text_sunday">Chủ nhật</string>
    <string name="full_date_text_invalid">Không xác định</string>
    <string name="schedule_detail_fab_start">Bắt đầu tập</string>
    <string name="schedule_detail_fab_reschedule">Lên lịch lại</string>
    <string name="schedule_detail_fab_delete">Xóa bài tập</string>
    <string name="schedule_detail_delete_dialog_title">Xóa bài tập</string>
    <string name="schedule_detail_delete_dialog_description">Bạn sẽ không thể khôi phục lại bài tập đã xóa</string>
    <string name="confirm_dialog_ok">Tiếp tục</string>
    <string name="confirm_dialog_cancel">Hủy</string>
    <string name="schedule_time_title">Đếm giờ tập luyện</string>
    <string name="post_list_date_placeholder">- %1$s</string>
    <string name="post_list_like_text_placeholder">%1$s lượt thích</string>
    <string name="post_list_comment_text_placeholder">%1$s bình luận</string>
    <string name="post_detail_activity_title">Bài đăng</string>
    <string name="post_detail_post_author">Đăng bởi</string>
    <string name="post_detail_content_text">Nội dung</string>
    <string name="post_detail_date_placeholder">%1$s - %2$s</string>
    <string name="share_new_post_activity_title">Đăng bài viết</string>
    <string name="share_new_post_image_text">Hình ảnh</string>
    <string name="comment_activity_title">Bình luận</string>
    <string name="statistic_in_date_text_field_statistic_date_placeholder">Ngày thống kê</string>
    <string name="statistic_text_field_exercise_intensity_placeholder">Cường độ vận động</string>
    <string name="statistic_standard_calories_text">Lượng calo tiêu chuẩn:</string>
    <string name="statistic_calories_consumed_text">Lượng calo đã nạp:</string>
    <string name="statistic_calories_burned_text">Lượng calo đã tiêu thụ:</string>
    <string name="statistic_number_of_exercises_text">Số bài tập:</string>
    <string name="statistic_workout_times_text">Tổng thời gian thực hiện:</string>
    <string name="statistic_in_date_calories_burned_chart_title">Lượng calo tiêu thụ trong từng bài tập</string>
    <string name="statistic_in_date_workout_times_chart_title">Thời gian thực hiện từng bài tập</string>
</resources>