<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.h2a.fitbook.views.fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_health_management"
        android:name="com.h2a.fitbook.views.fragments.healthmanagement.HealthManagementFragment"
        android:label="@string/menu_health_management"
        tools:layout="@layout/fragment_health_management" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.h2a.fitbook.views.fragments.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.h2a.fitbook.views.fragments.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.h2a.fitbook.views.fragments.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.h2a.fitbook.views.fragments.ProfileFragment"
        android:label="@string/menu_profile" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.h2a.fitbook.views.fragments.SettingsFragment"
        android:label="@string/menu_settings" />

    <fragment
        android:id="@+id/nav_sharing"
        android:name="com.h2a.fitbook.views.fragments.sharing.SharingFragment"
        android:label="@string/menu_sharing"
        tools:layout="@layout/fragment_sharing" />

</navigation>
