<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="12dp"
        android:paddingBottom="8dp">

        <!-- Statistic date -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/statistic_in_date_text_field_statistic_date_placeholder"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/dark_gray"
            app:hintTextColor="@color/black" >

            <AutoCompleteTextView
                android:id="@+id/statistic_in_date_actv_statistic_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:hint="@string/statistic_text_field_exercise_intensity_placeholder"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/dark_gray"
            app:hintTextColor="@color/black" >

            <AutoCompleteTextView
                android:id="@+id/statistic_in_date_actv_exercise_intensity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <!-- Statistic calories section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:layout_margin="12dp" >

                <!-- Standard calories -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statistic_in_date_tv_standard_calories_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/statistic_standard_calories_text"
                        android:textColor="@color/black" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/statistic_in_date_tv_standard_calories_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4000"
                        android:textColor="@color/black" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <!-- Calories consumed -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statistic_in_date_tv_calories_consumed_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/statistic_calories_consumed_text"
                        android:textColor="@color/black" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/statistic_in_date_tv_calories_consumed_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4500"
                        android:textColor="@color/black" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <!-- Calories burned -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statistic_in_date_tv_calories_burned_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/statistic_calories_burned_text"
                        android:textColor="@color/black" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/statistic_in_date_tv_calories_burned_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="300"
                        android:textColor="@color/black" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/statistic_in_date_tv_calories_burned_chart_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/statistic_in_date_calories_burned_chart_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/statistic_in_date_pch_calories_burned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:minHeight="350dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!-- Statistic time section -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="12dp">

                <!-- Number of exercises -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statistic_in_date_tv_number_of_exercises"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/statistic_number_of_exercises_text"
                        android:textColor="@color/black" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/statistic_in_date_tv_number_of_exercises_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="4"
                        android:textColor="@color/black" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <!-- Total times -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/statistic_in_date_tv_workout_times_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/statistic_workout_times_text"
                        android:textColor="@color/black" />

                    <Space
                        android:layout_width="4dp"
                        android:layout_height="match_parent" />

                    <TextView
                        android:id="@+id/statistic_in_date_tv_workout_times_value"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="30"
                        android:textColor="@color/black" />

                </LinearLayout>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="20dp" />

                <TextView
                    android:id="@+id/statistic_in_date_tv_workout_times_chart_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/statistic_in_date_workout_times_chart_title"
                    android:textAlignment="center"
                    android:textColor="@color/black" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="8dp" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/statistic_in_date_pch_workout_times"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minWidth="300dp"
                    android:minHeight="350dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>
