<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".views.activities.MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginVertical="60dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:srcCompat="@drawable/fitness_256" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <LinearLayout
            android:id="@+id/main_ll_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="fit"
                android:textAllCaps="true"
                android:textColor="@color/app_name_pink"
                android:textSize="48sp"
                tools:layout_editor_absoluteX="107dp"
                tools:layout_editor_absoluteY="333dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_black"
                android:text="book"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="48sp"
                tools:layout_editor_absoluteX="177dp"
                tools:layout_editor_absoluteY="333dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_ll_auth_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="10dp"
            android:visibility="gone">

            <Button
                android:id="@+id/main_btn_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/auth_button_primary_background_filled"
                android:fontFamily="@font/roboto_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/main_login_button_title"
                android:textAllCaps="false"
                android:textColor="@color/auth_button_primary_title_filled"
                android:textSize="18sp"
                app:cornerRadius="25dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:id="@+id/main_btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/auth_button_primary_background_filled"
                android:fontFamily="@font/roboto_bold"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/main_sign_up_button_title"
                android:textAllCaps="false"
                android:textColor="@color/auth_button_primary_title_filled"
                android:textSize="18sp"
                app:cornerRadius="25dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/main_tv_continue_as_guest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:drawablePadding="4dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/main_continue_as_guest_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:drawableEndCompat="@drawable/ic_round_arrow_forward_24"
                app:drawableTint="@color/white" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
